Resolvido bug no caso de uso A: Listar Projetos de Leis ativos; outros pormenores.